Update cheatsheet.md